<resources>
    <string name="app_name" translatable="false">Itinerum</string>
    <string name="app_name_tm" translatable="false">Itinerum&#8482;</string>
    <string-array name="preamble_activities" translatable="false">
        <item>WelcomeActivity</item>
        <item>AboutActivity</item>
        <item>SystemAccessActivity</item>
        <item>TermsOfServiceActivity</item>
        <item>LetsGoActivity</item>
        <item>SurveyActivity</item>
    </string-array>
    <string name="feedback">Send Feedback</string>
    <string name="info_url" translatable="false"> </string>
    <string name="default_code"></string>
    <string name="itinerum_url">http://www.itinerum.ca</string>
    <string name="get_consent_form">Get Consent Form</string>
    <string name="refresh">Refresh</string>
    <string name="sync">Sync</string>
    <string name="stop" translatable="false">Stop Recording</string>
    <string name="pause">Location recording paused</string>
    <string name="resume">Location recording resumed</string>
    <string name="mapKey" translatable="false">0cKUmhW1P0QHi3T7ALM7kklzvknNCuWJwqNIZ6w</string>
    <string name="map_title" translatable="false">Itinerum</string>
    <string name="powered_by">Powered by Itinerum&#8482;</string>
    <string name="understand_button">I Understand</string>
    <string name="continue_button">Continue</string>
    <string name="start_button">Start</string>
    <string name="send_button">Send</string>
    <string name="submit_button">Submit</string>
    <string name="agree">I agree</string>
    <string name="decline">I decline</string>
    <string name="notification_title" translatable="false">Itinerum</string>
    <string name="notification_group_persistent">Persistent</string>
    <string name="notification_group_persistent_description">Required notification - please hide</string>
    <string name="notification_group_trip">Trip</string>
    <string name="notification_group_trip_description"></string>
    <string name="notification_text_not_recording" translatable="false">Not Recording: you are stopped or at a known
        location</string>
    <string name="notification_text_recording" translatable="false">Recording</string>
    <string name="constant_notification_message">Recording in the background. Tap for more info</string>
    <string name="paused_notification_message">Recording is paused. Tap for more info</string>
    <string name="notification_stopped_title">Stop detected</string>
    <string name="notification_stopped_message">You seem to have stopped. Have you reached a destination?</string>
    <string name="feedback_email" translatable="false">itinerum@concordia.ca</string>
    <string name="feedback_title">Itinerum Feedback on Android</string>
    <string name="app_info_1_txt" translatable="false">This is an ongoing study. For the duration of your participation
        (a maximum of two weeks), please leave Itinerum&#8482; running in the background. You can use
        your phone as usual.
    </string>
    <string name="app_info_2_txt" translatable="false">While we have made our best efforts to minimize power consumption,
        Itinerum&#8482; will still decrease the battery life of your phone because it uses location
        services. It may be necessary to charge your phone if you spend a lot of time travelling on
        a given day.
    </string>
    <string name="permissions_title">Permission</string>
    <string name="permissions_body">Location services are required for this app to record your location. Please click below to allow this app permission to use location services.</string>
    <string name="permissions_warning">You will not be able to record points and participate in the survey without enabling this permission.</string>
    <string name="location_button">Enable Location</string>
    <string name="location_hint">Enter an address or touch the map</string>
    <string name="location_not_found">Location not found. Try zooming out.</string>
    <string name="location_search_error">Location not found. Please check your connection</string>
    <string name="date_format_error" translatable="false">Internal error: date formatting exception.</string>
    <string name="log_filename" translatable="false">%1$s%2$s%3$d%4$s</string>
    <string name="no_resolution" translatable="false">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code" translatable="false">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="gpsprovider_unavailable">No GPS provider available. Please check your location
        settings and enable a location provider.
    </string>
    <string name="started" translatable="false">Recording</string>
    <string name="stopped" translatable="false">Stopped</string>
    <string name="activity_in_vehicle" translatable="false">In Vehicle</string>
    <string name="ethics_preamble">Itinerum&#8482; is an application developed as part of a research project between Concordia University and the survey administrator. Its use is governed by Concordia University’s ethics guidelines.</string>
    <string name="ethics_title">Research Ethics</string>
    <string name="ethics_body">
        You are invited to closely read the following information before deciding whether or not to participate in a transportation study conducted on the Itinerum&#8482; platform. Take as much time as you need and consult other people if necessary.

        \n\nA. PURPOSE
        \n\nThe purpose of this research project is to collect and analyze travel behaviour data with smart phones and similar devices. The survey administrator and researchers at Concordia University will use travel behavioural data (origin and destination of trips, number of trips, transportation modes, etc.) to better understand behaviour. Reports showing anonymous, aggregate data will be used in conferences, publications or on the Internet.

        \n\nB. PROCEDURES
        \n\n• Participation in this survey will be done through my iOS/Android phone by using an app.
        \n\n• I will be asked a few questions regarding socio-demographic information about me and my household.
        \n\n• The duration of the survey will vary but you can cancel your participation at any time.
        \n\n• During my participation in the survey, locational information will be collected automatically and then transmitted and recorded securely on servers hosted in Canada and administered by Professor Zachary Patterson of Concordia University.
        \n\n• Should the survey administrator offer a draw for prizes, the terms of this draw will be spelled out within the survey information page of the app.
        \n\n• Raw data collected as part of this survey will only be used in line with the purpose of this project. Raw data will only be available to researchers of the survey administrator and in Zachary Patterson’s TRIP Laboratory, subject to the <i>Act respecting Access to documents held by public bodies and the Protection of personal information</i> (chapter A-2.1) in the Province of Québec, Canada.
        \n\n• The privacy of data collected will be respected and the information that could reveal the identity of participants, directly or indirectly, will not be disseminated.

        \n\nC. RISKS
        \n\nParticipation in this survey represents no known or foreseeable risk to me.

        \n\nD. BENEFITS
        \n\nTransportation behavioural data (trips origins and destinations, number of trips, transport modes, etc.) will allow the estimation of transportation demand and planning of the transportation system, representing thus a possible benefit to society.

        \n\nIn addition, the survey administrator may offer participants a draw for prizes. Please verify the survey information page in the app for further details.

        \n\nE. CONDITIONS OF PARTICIPATION
        \n\nI understand that I must be 18 years of age or older to participate in this study.
        \n\nI understand that my participation is entirely voluntary and that I am free to withdraw my consent and discontinue my participation at any time (by deleting the Itinerum&#8482; app) without negative consequences.
        \n\nI understand that should I withdraw from the study, any data collected up until my withdrawal will remain as part of the survey database with the survey administrator and Concordia University.
        \n\nI understand that my participation in this study is anonymous (i.e., researchers will not know my identity)
        \n\nI understand that the results from analysis of this data may be published, but will not be presented in such a way that my identity could be revealed.

        \n\nF. DECLARATION OF CONSENT

        \n\n<b>I ACCEPT THESE CONDITIONS</b> (mandatory to participate in the study)

        \n\nIf at any time you have questions or comments about the proposed research or this study, please send an email to: itinerum@concordia.ca


    </string>
    <string name="ethics_postamble">By pressing the button below, I confirm that I have attentively read and understood the above consent and the information presented, and I attest to the fact that my consent is informed, that all of my questions have been answered to my satisfaction and that I have had sufficient time to decide whether I want to participate in this study. I freely and voluntarily consent to participate in this study.</string>
    <string name="welcome_title">Welcome to Itinerum</string>
    <string name="welcome_paragraph">Thank you for downloading Itinerum. Your participation is appreciated.</string>
    <string name="welcome_age_constraint">I confirm that I am 18 or older.</string>
    <string name="access_title">System access</string>
    <string name="title_data_range">Show data from</string>
    <string name="title_points_recorded">My Destinations</string>
    <string name="title_days_remaining">Days Remaining</string>
    <string name="datetime_enum_today">Today</string>
    <string name="datetime_enum_yesterday">Yesterday</string>
    <string name="datetime_enum_all">All Days</string>
    <string name="datetime_enum_custom">Custom</string>
    <string name="survey_selection_title">Survey Selection</string>
    <string name="survey_selection_description">Please input the survey code you received below</string>
    <string name="survey_selection_hint">Code</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_location">Location</string>
    <string name="pref_category_app">App</string>
    <string name="pref_title_sync">Sync</string>
    <string name="pref_summary_sync">Manually sync data to backend.\nLast sync:</string>
    <string name="pref_title_leave">Leave Survey</string>
    <string name="pref_summary_leave">Leave the current survey and wipe data from device</string>
    <string name="pref_title_pause">Pause Recording</string>
    <string name="pref_summary_pause">Stop all location recording indefinitely. No trips will be recorded while paused.</string>
    <string name="pref_title_contact">Contact Us</string>
    <string name="pref_summary_contact">Report bugs, issues, enhancements, or suggestions</string>
    <string name="pref_title_rate">Rate the app</string>
    <string name="pref_summary_rate">Enjoying Itinerum? Give us a rating on the Play Store!</string>
    <string name="pref_title_about">About Itinerum™</string>
    <string name="pref_title_open_source">Open Source Licenses</string>
    <string name="pref_title_danger">Danger</string>
    <string name="get_going_ethics_paragraph">Itinerum follows these research ethics. Please review and agree to them to use the application</string>
    <string name="get_going_survey_paragraph">An access code for the survey you wish to participate in is required. Please tap here to enter a code.</string>
    <string name="lets_get_started">Let\'s get started</string>
</resources>