<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.itinerum.android.survey.PermissionsFragment">

    <TextView
        android:id="@+id/title"
        style="@style/LargeTitle"
        android:text="@string/permissions_title"/>

    <TextView
        android:id="@+id/question"
        android:padding="8dp"
        style="@style/BodyParagraph"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/permissions_body"/>

    <Button
        android:id="@+id/location_button"
        android:text="@string/location_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/permission_warning"
        android:visibility="invisible"
        android:padding="8dp"
        style="@style/EmphasisParagraph"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/permissions_warning"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fragment_continue_button"
        style="@style/StockButton"
        android:text="@string/continue_button"
        android:layout_height="wrap_content"/>

</LinearLayout>
