<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_text"
            app:tint="@color/ethics_text_banner_tint"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_xl"
            />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/ethics_title"
            style="@style/Title.DarkTheme"
            />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/ethics_preamble"
            style="@style/Paragraph.Emphasis.DarkTheme"
            android:paddingLeft="@dimen/padding_huge"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_medium"
            />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/ethics_body"
            style="@style/Paragraph.DarkTheme"
            android:autoLink="all"
            android:paddingLeft="@dimen/padding_huge"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_medium"
            />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/ethics_postamble"
            style="@style/Paragraph.Emphasis.DarkTheme"
            android:paddingLeft="@dimen/padding_huge"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_medium"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continue_button"
            android:text="@string/agree"
            android:layout_gravity="center_horizontal"
            style="@style/StockButton.DarkTheme"
            android:layout_marginTop="16dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_decline_button"
            android:text="@string/decline"
            android:layout_gravity="center_horizontal"
            style="@style/StockButton.DarkTheme"
            android:textColor="@color/negative_button_text_colour"/>

    </LinearLayout>

</ScrollView>