<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/LargeTitle"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/permissions_title"/>

    <TextView
        android:id="@+id/question"
        style="@style/BodyParagraph"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/permissions_body"/>

    <Button
        android:id="@+id/location_button"
        android:text="@string/location_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/permission_warning"
        android:visibility="invisible"
        android:padding="8dp"
        style="@style/EmphasisParagraph"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/permissions_warning"/>

</merge>