<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ca.itinerum.android.survey.SurveyActivity"
    android:background="@drawable/background_card_rounded_corners">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title.DarkTheme"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/survey_selection_title"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Paragraph.Emphasis.DarkTheme"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/survey_selection_description"/>

    <EditText
        android:id="@+id/select_survey_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textNoSuggestions|textFilter"
        android:maxLines="1"
        android:hint="@string/survey_selection_hint"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="#88ffffff"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_button"
        android:layout_width="match_parent"
        style="@style/StockButton.DarkTheme"
        android:layout_marginTop="8dp"/>

</LinearLayout>