<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_title"
                android:lines="1"
                style="@style/Title.DarkTheme"
                />

            <ca.itinerum.android.common.RoundedCheckboxView
                android:id="@+id/card_research_ethics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/get_going_ethics_paragraph"/>

            <ca.itinerum.android.common.RoundedCheckboxView
                android:id="@+id/card_location_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                style="@style/Checkbox"
                android:text="@string/permissions_body"/>

            <ca.itinerum.android.common.RoundedCheckboxView
                android:id="@+id/card_survey_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                style="@style/Checkbox"
                android:text="@string/get_going_survey_paragraph"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/continue_button"
                style="@style/StockButton.Survey"
                android:text="@string/continue_button"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/back_button"
        style="@style/BackButton"/>

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_gravity="center"
            android:indeterminate="true"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>